--- a/image.qrc
+++ b/image.qrc
@@ -46,6 +46,7 @@
         <file>icons/menu/Home/Material/form/screen.png</file>
         <file>icons/menu/Home/RDV/form/calendar.png</file>
         <file>icons/menu/Home/Patient/form/iconpatient.png</file>
+        <file>icons/menu/Home/Salle/form/clock.png</file>
     </qresource>
     <qresource prefix="/pp"/>
     <qresource prefix="/icons"/>
